# libtooling-lab

./: .gitignore  CLAUDE.md  README.md
docs/: PROGRESS.md  README.md  node_index.md  part_10_decls_long_tail.md  part_11_stmts_core.md  part_12_stmts_loops_jumps.md  part_13_stmts_long_tail.md  part_14_expr_base.md  part_15_expr_literals.md  part_16_expr_names_members.md  part_17_expr_operators.md  part_18_expr_calls.md  part_19_expr_construction_init.md  part_1_setup_first_tool.md  part_20_expr_casts.md  part_21_expr_cpp_objects.md  part_22_expr_invisible.md  part_23_expr_dependent_packs.md  part_24_expr_consteval_misc.md  part_25_types_qualtype_builtins.md  part_26_types_derived.md  part_27_types_function_tag_sugar.md  part_28_types_deduction_dependence.md  part_29_types_typeloc.md  part_2_ast_fundamentals.md  part_30_visitors.md  part_31_source_manager.md  part_32_tokens_lexing.md  part_33_ast_matchers.md  part_34_command_line.md  part_35_advanced.md  part_36_preprocessor_includes.md  part_37_index.md  part_38_rewrite_edit.md  part_39_analysis_cfg.md  part_3_decls_infrastructure.md  part_4_decls_variables.md  part_5_decls_functions.md  part_6_decls_records.md  part_7_decls_templates_functions.md  (+2 more)
legacy/: README.md
legacy/capstone/: CMakeLists.txt  cpp-modernize.cpp
legacy/project/: CMakeLists.txt
legacy/project/include/: widget.h
legacy/project/src/: main.cpp  widget.cpp
legacy/tools/: CMakeLists.txt  declprinter.cpp  firsttool.cpp  fixnull.cpp  injectlog.cpp  matchfns.cpp
skeletons/cfg-tool/: CMakeLists.txt  main.cpp
skeletons/cfg-tool/.cache/clangd/index/: main.cpp.F24F3474D46A13CD.idx
skeletons/index-tool/: CMakeLists.txt  main.cpp
skeletons/index-tool/.cache/clangd/index/: main.cpp.2C74DCA492A6E390.idx
skeletons/matcher-tool/: CMakeLists.txt  main.cpp
skeletons/matcher-tool/.cache/clangd/index/: main.cpp.7B83ED8A6836F484.idx
skeletons/rewrite-tool/: CMakeLists.txt  main.cpp
skeletons/rewrite-tool/.cache/clangd/index/: main.cpp.C344A73B5FDA831E.idx
skeletons/rewrite-tool/sample/: sample.cpp
skeletons/visitor-tool/: CMakeLists.txt  main.cpp
skeletons/visitor-tool/sample/: basic.cpp
